# jobtractor

./: README.md  pyproject.toml  test.txt
jobtractor/: __init__.py  extraction.py  helpers.py  llm_extraction.py  loader.py  models.py  pipeline.py  pipelines.py  processing.py  rb_extraction.py  strategies.py
tests/: conftest.py  test_helpers.py  test_llm_extraction.py  test_loader.py  test_pipeline.py  test_pipelines.py  test_processing.py  test_rb_extraction.py  test_strategies.py
tests/fixtures/: noodle_ai_10_23.txt  orchard_loaded.txt  wikimedia_10_23.txt
tests/fixtures/html/: climeworks_10_29.txt  wikimedia_10_23.html
tests/fixtures/organizations/: climeworks.json  wikimedia.json
tests/fixtures/text/: climeworks_data_analyst.txt  wikimedia_data_engineer.txt
